<resources>
    <string name="app_name">RecipeApp</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="ingredientsHeading">Ingredients</string>

    <string name="americanPancakes">American Pancakes</string>
    <string name="americanPancakesIngredients">135g/4¾oz plain flour \n 1 tsp baking powder \n ½ tsp salt \n 2 tbsp caster sugar \n 130ml/4½fl oz milk 1 large egg, lightly beaten \n 2 tbsp melted butter (allowed to cool slightly) or olive oil, plus extra for cooking</string>
    <string name="americanPancakesMethod">1. Sift the flour, baking powder, salt and caster sugar into a large bowl. In a separate bowl or jug, lightly whisk together the milk and egg, then whisk in the melted butter. \n 2. Pour the milk mixture into the flour mixture and, using a fork, beat until you have a smooth batter. Any lumps will soon disappear with a little mixing. Let the batter stand for a few minutes. \n 3. Heat a non-stick frying pan over a medium heat and add a knob of butter. When it is melted, add a ladle of batter (or two if your frying pan is big enough to cook two pancakes at the same time). It will seem very thick but this is how it should be. Wait until the top of the pancake begins to bubble, then turn it over and cook until both sides are golden brown and the pancake has risen to about 1cm/½in thick. \n 4. Repeat until all the batter is used up. You can keep the pancakes warm in a low oven, but they taste best fresh out the pan. \n 5. Serve with lashings of real maple syrup and extra butter, if you like.</string>

    <string name="beansOnToastTitle">Beans On Toast</string>
    <string name="beansOnToastIngredients">½ tbsp olive oil plus extra for drizzling \n ½ small onion \n sliced ½ small red pepper, thinly sliced into strips \n 1 garlic clove, halved \n 227g can chopped tomatoes \n ½ tsp smoked paprika \n 2 tsp red wine vinegar \n 210g can butter beans or chickpeas, drained \n ¼ tsp sugar \n slice seeded bread \n a few parsley sprigs, finely chopped</string>
    <string name="beansOnToastMethod">1. Heat the oil in a small pan, add the onion and pepper, and fry gently until soft, about 10-15 mins. Crush half the garlic and add this to the pan, along with the tomatoes, paprika, vinegar, beans, sugar and some seasoning. Bring to a simmer and cook for 10-15 mins or until slightly reduced and thickened. \n
    \n 2. Toast the bread, rub with the remaining garlic and drizzle with a little oil. Spoon the beans over the toast, drizzle with a little more oil and scatter over the parsley.</string>

    <string name="poachedEggsTitle">Poached Eggs</string>
    <string name="poachedEggsIngredients">Water \n 2 Eggs</string>
    <string name="poachedEggsMethod">Stovetop Method: \n Stovetop Method: Fill saucepan with about 3 inches (8 cm) of water. Heat until water simmers gently. Break cold egg into small dish or saucer. Holding dish just above simmering water, gently slip egg into water. Repeat for remaining eggs. Cook in barely simmering water until white is set and yolk is cooked as desired, 3 to 5 minutes. Remove eggs with slotted spoon and drain well.
    \n \n  Microwave Method: \n Pour 1/3 cup (75 mL) water into small deep bowl. Bring to boil on High (100% power). Break eggs and slip into water, one at a time. Pierce yolk membrane with fork. Cover with plastic wrap, leaving small steam vent. Cook until white is set and yolk is cooked as desired, 40 to 60 seconds. Let stand, covered, for 1 minute. Drain and serve.</string>

    <string name="spicyAvocadoWrapsTitle">Spicy Avocado Wraps</string>
    <string name="spicyAvocadoWrapsIngredients">0.5 x 300g pack Quorn chicken-style pieces (or similar vegetarian product) \n generous squeeze juice 0.5 lime \n ½ tsp mild chilli powder \n 1 garlic clove , chopped \n
    \n 1 tsp olive oil \n 2 seeded wraps  \n 1 avocado , halved and stoned \n 1 roasted red pepper , from a jar \n few sprigs coriander , chopped</string>
    <string name="spicyAvocadoWrapsMethod">1. Mix the vegetarian, chicken-style pieces with the lime juice, chilli powder and garlic. \n 2. Heat the oil in a non-stick frying pan then fry the pieces for a couple of mins, while you warm the wraps following the pack instructions or if you have a gas hob, heat them over the flame to slightly char them. Do not let them dry out or they are difficult to roll.
    \n Squash half an avocado onto each wrap, add the peppers to the pan to warm them through then pile onto the wraps with the chicken-style pieces, and sprinkle over the coriander. Roll up, cut in half and eat with your fingers.</string>

    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>