<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeansOnToast">

    <TextView
        android:id="@+id/ingredientList"
        android:layout_width="340dp"
        android:layout_height="187dp"
        android:layout_marginBottom="24dp"
        android:text="@string/beansOnToastIngredients"
        app:layout_constraintBottom_toTopOf="@+id/method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredientsHeading"
        app:layout_constraintBottom_toTopOf="@+id/ingredientList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <TextView
        android:id="@+id/method"
        android:layout_width="336dp"
        android:layout_height="369dp"
        android:layout_marginBottom="56dp"
        android:text="@string/beansOnToastMethod"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/RecipeTitle"
        android:layout_width="213dp"
        android:layout_height="38dp"
        android:text="@string/beansOnToastTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>